# summarizer

./: AGENTS.md  README.md  demo.py  pyproject.toml  requirements.txt  summarize_video.py  test_installation.py  tts.py
